After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749887 - Fix coverity bugs
Fix coverity bugs
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-05-26 10:49 UTC by Bastien Nocera
Modified: 2015-07-10 14:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pls: Avoid NULL dereference (1005 bytes, patch)
2015-05-26 10:49 UTC, Bastien Nocera
committed Details | Review
examples: Don't use options uninitialised (1.06 KB, patch)
2015-05-26 10:49 UTC, Bastien Nocera
committed Details | Review
grilo-test-ui: Fix possible uninitialised use (1.06 KB, patch)
2015-05-26 10:49 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-05-26 10:49:08 UTC
.
Comment 1 Bastien Nocera 2015-05-26 10:49:12 UTC
Created attachment 303987 [details] [review]
pls: Avoid NULL dereference

From coverity:
libs/pls/grl-pls.c:624: var_deref_op: Dereferencing null pointer "valid_entries".

valid_entries can be NULL, so check its value before using it in the
debug output.
Comment 2 Bastien Nocera 2015-05-26 10:49:17 UTC
Created attachment 303988 [details] [review]
examples: Don't use options uninitialised

From coverity:
grilo-0.2.12/examples/browsing-pls.c:119: uninit_use_in_call: Using uninitialized value "options" when calling "g_object_unref".
Comment 3 Bastien Nocera 2015-05-26 10:49:21 UTC
Created attachment 303989 [details] [review]
grilo-test-ui: Fix possible uninitialised use

From coverity:
grilo-0.2.12/tools/grilo-test-ui/main.c:776:20: warning: 'next_op_id' may be used uninitialized in this function [-Wmaybe-uninitialized]
Comment 4 Bastien Nocera 2015-07-10 14:05:29 UTC
Attachment 303987 [details] pushed as 532b308 - pls: Avoid NULL dereference
Attachment 303988 [details] pushed as f8e9945 - examples: Don't use options uninitialised
Attachment 303989 [details] pushed as 4391c96 - grilo-test-ui: Fix possible uninitialised use