pls: Avoid NULL dereference

From coverity:
libs/pls/grl-pls.c:624: var_deref_op: Dereferencing null pointer "valid_entries".

valid_entries can be NULL, so check its value before using it in the
debug output.

https://bugzilla.gnome.org/show_bug.cgi?id=749887